--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <path d="M14.667 11.668a6.51 6.51 0 0 1-1.458.789c-1.4.56-3.242.876-5.21.876-1.966 0-3.809-.316-5.208-.876a6.51 6.51 0 0 1-1.458-.79v1.666C1.333 14.806 4.318 16 8 16s6.667-1.194 6.667-2.667v-1.665z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Blockchain Data Warehouses</h5>
-                                <p class="text-muted card-text mb-4">Analysis of the major blockchain data warehouses and the chains they support.</p><a class="btn btn-primary" href="warehouses.html">See here</a>
+                                <p class="text-muted card-text mb-4">Analysis of the major blockchain data warehouses and the chains they support.</p><a class="btn btn-primary" href="datawarehouses.html">See here</a>
                             </div>
                         </div>
                     </div>
