--- a/datawarehouses.html
+++ b/datawarehouses.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12"><img class="rounded mx-auto d-block shadow img-thumbnail" src="assets/img/Blockchain%20Data%20Warehouses%20-%20Analytics%20Chart1024_3.jpg"></div>
+                <div class="col-md-12"><iframe class="airtable-embed" src="https://airtable.com/embed/shrkRiAXAWN2YwZRV?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe></div>
             </div>
         </div>
     </section>
