--- a/index.html
+++ b/index.html
@@ -35,21 +35,50 @@
             </div>
         </div>
     </nav>
-    <header class="bg-primary-gradient"></header>
-    <section class="py-4 py-xl-5">
-        <div class="container h-100">
-            <div class="text-white bg-primary border rounded border-0 p-4 py-5">
+    <header class="bg-primary-gradient">
+        <section class="py-4 py-xl-5">
+            <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                         <div>
-                            <h1 class="text-uppercase fw-bold text-white mb-3">Blockchain data Resources</h1>
-                            <p class="mb-4">Find the latest companies, tools, tips, and tutorials on how to access public blockchain data and the projects that run on them.&nbsp;</p>
+                            <h2 class="text-uppercase fw-bold mb-3"><br>Blockchain Data Resources</h2>
+                            <p class="mb-4">Find the latest companies, tools, tips, and tutorials on how to access public blockchain data and the projects that run on them. </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+    </header>
+    <div class="container py-4 py-xl-5">
+        <div class="text-center text-white-50 bg-primary border rounded border-0 p-3">
+            <div class="row row-cols-2 row-cols-md-4">
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">80+</h4>
+                        <p class="mb-0">Companies</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">44</h4>
+                        <p class="mb-0">Blockchains</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">4</h4>
+                        <p class="mb-0">Video Tutorials</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">2</h4>
+                        <p class="mb-0">Python Templates</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
     <section>
         <div class="container bg-primary-gradient py-5">
             <div class="row">
