--- a/data.html
+++ b/data.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Templates</title>
+    <title>Blockchain Data Warehouses</title>
     <link rel="icon" type="image/jpeg" sizes="72x77" href="assets/img/favicon.jpg">
     <link rel="icon" type="image/jpeg" sizes="72x77" href="assets/img/favicon.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -27,9 +27,9 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="analytics.html">Analytics</a></li>
-                    <li class="nav-item"><a class="nav-link" href="data.html">Data</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="data.html">Data</a></li>
                     <li class="nav-item"><a class="nav-link" href="tools.html">Tools</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="templates.html">Templates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="templates.html">Templates</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorials.html">Tutorials</a></li>
                 </ul><a href="https://twitter.com/primo_data"><i class="fa fa-twitter fa-lg" style="color:#1DA1F2"></i></a>
             </div>
@@ -39,27 +39,12 @@
         <div class="container py-5">
             <div class="row mb-4 mb-lg-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <p class="fw-bold text-success mb-2">Templates</p>
-                    <h3 class="fw-bold">Blockchain Data Templates</h3>
+                    <p class="fw-bold text-success mb-2">The Data</p>
+                    <h3 class="fw-bold">Blockchain Data Warehouses</h3>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-                <div class="col mb-5"><img class="rounded img-fluid shadow" src="assets/img/Fg6NVEOaEAAnvV7.png"></div>
-                <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
-                    <div>
-                        <h5 class="fw-bold">Cross Chain Analytics</h5>
-                        <p class="text-muted mb-4">Pull blockchain data from the following APIs using HEX:<br>* Solana from Flipside<br>* Ethereum from Footprint<br>* Bitcoin from Lubase<br>* Dogechain from GCP<br>* Celo from Nansen (via GCP)<br>* Cosmos from Numia (via GCP)<br>* BSC from Dune<br>* Polygon from Transpose</p><a class="btn btn-primary" href="https://app.hex.tech/4ab1351f-1abb-46b1-9d35-d7fcd63c831f/hex/53ecd12f-c71b-417d-913d-5816663f22d2/draft/logic">Use now!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-                <div class="col mb-5"><img class="rounded img-fluid shadow" src="assets/img/2022-11-07_22-10-13.jpg"></div>
-                <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
-                    <div>
-                        <h5 class="fw-bold">Google CoLab Template</h5>
-                        <p class="text-muted mb-4">Easily query blockchain data via APIs from leading blockchain analytics platforms (@flipsidecrypto,&nbsp; @Footprint_Data,&nbsp;@DuneAnalytics,&nbsp;@onluabase &amp;&nbsp;@googlecloud) w/ pre-written python code in this Google CoLab notebook</p><a class="btn btn-primary" href="https://colab.research.google.com/drive/1zsxX28_vZMVLSSJYOLI5hv2zsdKH34T0?usp=sharing">Use now!</a>
-                    </div>
-                </div>
+            <div class="row">
+                <div class="col-md-12"><iframe class="airtable-embed" src="https://airtable.com/embed/shrqx2M6SmMI7SF9s?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="620" style="background: transparent; border: 1px solid #ccc;"></iframe></div>
             </div>
         </div>
     </section>
