--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-clipboard-data" style="font-size: 15px;">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/index.html"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-clipboard-data" style="font-size: 15px;">
                         <path d="M4 11a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0v-1zm6-4a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V7zM7 9a1 1 0 0 1 2 0v3a1 1 0 1 1-2 0V9z"></path>
                         <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"></path>
                         <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"></path>
                     </svg></span><span>Primo Data</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="ecosystem.html">Ecosystem</a></li>
-                    <li class="nav-item"><a class="nav-link" href="datawarehouses.html">Data Warehouses</a></li>
+                    <li class="nav-item"><a class="nav-link" href="analytics.html">Analytics</a></li>
+                    <li class="nav-item"><a class="nav-link" href="data.html">Data</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tools.html">Tools</a></li>
                     <li class="nav-item"><a class="nav-link" href="templates.html">Templates</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorials.html">Tutorials</a></li>
                 </ul><a href="https://twitter.com/primo_data"><i class="fa fa-twitter fa-lg" style="color:#1DA1F2"></i></a>
@@ -42,7 +42,7 @@
                     <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                         <div>
                             <h2 class="text-uppercase fw-bold mb-3"><br>Blockchain Data Resources</h2>
-                            <p class="mb-4">Find the latest companies, tools, tips, and tutorials on how to access public blockchain data and the projects that run on them. </p>
+                            <p class="mb-4">Discover the best data warehouses &amp; tools to analyze blockchain data. </p>
                         </div>
                     </div>
                 </div>
@@ -60,20 +60,20 @@
                 </div>
                 <div class="col">
                     <div class="p-3">
-                        <h4 class="display-5 fw-bold text-white mb-0">44</h4>
+                        <h4 class="display-5 fw-bold text-white mb-0">54</h4>
                         <p class="mb-0">Blockchains</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">
+                        <h4 class="display-5 fw-bold text-white mb-0">15</h4>
+                        <p class="mb-0">Data Warehouses</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="p-3">
                         <h4 class="display-5 fw-bold text-white mb-0">4</h4>
                         <p class="mb-0">Video Tutorials</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="p-3">
-                        <h4 class="display-5 fw-bold text-white mb-0">2</h4>
-                        <p class="mb-0">Python Templates</p>
                     </div>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                                         <path fill-rule="evenodd" d="M15.817.113A.5.5 0 0 1 16 .5v14a.5.5 0 0 1-.402.49l-5 1a.502.502 0 0 1-.196 0L5.5 15.01l-4.902.98A.5.5 0 0 1 0 15.5v-14a.5.5 0 0 1 .402-.49l5-1a.5.5 0 0 1 .196 0L10.5.99l4.902-.98a.5.5 0 0 1 .415.103zM10 1.91l-4-.8v12.98l4 .8V1.91zm1 12.98 4-.8V1.11l-4 .8v12.98zm-6-.8V1.11l-4 .8v12.98l4-.8z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Web3 Data Ecosystem</h5>
-                                <p class="text-muted card-text mb-4">Overview of the companies across the landscape from nodes -&gt; data warehouses -&gt; APIs, and more!</p><a class="btn btn-primary" href="ecosystem.html">See here<br></a>
+                                <p class="text-muted card-text mb-4">Overview of the companies across the landscape from nodes -&gt; data warehouses -&gt; APIs, and more!</p><a class="btn btn-primary" href="tools.html">See here<br></a>
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                                         <path d="M14.667 11.668a6.51 6.51 0 0 1-1.458.789c-1.4.56-3.242.876-5.21.876-1.966 0-3.809-.316-5.208-.876a6.51 6.51 0 0 1-1.458-.79v1.666C1.333 14.806 4.318 16 8 16s6.667-1.194 6.667-2.667v-1.665z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Blockchain Data Warehouses</h5>
-                                <p class="text-muted card-text mb-4">Analysis of the major blockchain data warehouses and the chains they support.</p><a class="btn btn-primary" href="datawarehouses.html">See here</a>
+                                <p class="text-muted card-text mb-4">Analysis of the major blockchain data warehouses and the chains they support.</p><a class="btn btn-primary" href="data.html">See here</a>
                             </div>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col">
                     <div class="card border-0 shadow-none">
-                        <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/sNtGjdQr_400x400.jpg">
+                        <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/profile.jpg">
                             <div>
                                 <h5 class="fw-bold text-primary mb-0"><strong>Max Mershon</strong></h5>
                                 <p class="text-muted mb-1">Creator</p>
